# ardrone_training

./: CMakeLists.txt  README  manifest.xml  package.xml
launch/: keyboard_controller.launch
msg/: ColorHSV.msg  TargetCoord.msg  TrainingData.msg
src/: all_in_one.py  drone_controller.py  keyboard_controller.py  video_processing.py
